--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>week Challenge</title>
 </head>
 <body>
+    <div class="G-container">
         <div class="container">
             <div class="camera-b">
                 <div class="camera camera-one">
@@ -43,5 +44,6 @@
                 </div>
             </div> 
         </div>
+    </div>
 </body>
 </html>
