--- a/index.html
+++ b/index.html
@@ -35,9 +35,16 @@
 
         <div class="container2">
             <div class="container-black">
+               
                <div class="camera-haut">
                     <div class="cercle"></div>
                     <div class="cercle2"></div>
+                    
+                </div>
+                <div class="lumiere">
+                    <div class="lum1"></div>
+                    <div class="lum2"></div>
+                    <div class="lum3"></div>
                 </div>
                 <div class="cred">
                    <h4>Chris le <span>Conquerant </span> </h4>
